--- a/src/EventManager/appsettings.json
+++ b/src/EventManager/appsettings.json
@@ -1,6 +1,6 @@
-﻿{
+{
   "ApplicationInsights": {
-    "InstrumentationKey": ""
+    "InstrumentationKey": "7976e82a-8c99-491f-a8db-7eb816a0ded4"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-EventManager-ac6c5e16-9d27-499b-b9ce-e5443d6620b4;Trusted_Connection=True;MultipleActiveResultSets=true"
